[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "nisar-tools"
version = "0.1.0"
description = "Out-of-core, object-oriented tools for cropping, merging, and processing NISAR GSLC products into interferograms."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Eitan Rapaport" }]
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "xarray",
    "dask[array]",
    "zarr>=2.18,<3",
    # Used directly: the HDF5 unshuffle in gslc.py and the stage compressor.
    "numcodecs",
    "rioxarray",
    "rasterio",
    "affine",
    "pyproj",
    "snaphu",
    "matplotlib",
]

[project.optional-dependencies]
# pygmt pulls in the GMT native library; keep it optional so the package
# imports cleanly on machines without GMT.
mask = ["pygmt"]
# earthaccess (Earthdata search/download) and sardem (DEMs) are only needed for
# the download module and are imported lazily. NOTE: earthaccess's latest
# release requires Python >= 3.12; on 3.11 pin an older earthaccess (or use the
# standard-library-only direct method, download_gslcs(..., method="asf")).
download = ["earthaccess", "sardem"]
# The osgeo bindings and gdal_* CLI tools. Optional and deliberately not a hard
# dependency: pip's gdal builds against system libgdal headers and commonly
# fails, whereas conda-forge's does not -- environment.yml installs it there.
# Nothing in the package imports osgeo; rasterio already vendors GDAL for it.
gdal = ["gdal"]
dev = ["pytest", "dask[diagnostics]"]

[tool.setuptools.packages.find]
include = ["nisar_tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
